--- a/04/ex02/Makefile
+++ b/04/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: maperrea <maperrea@student.s19.be>         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/27 14:25:26 by maperrea          #+#    #+#              #
-#    Updated: 2021/11/11 17:22:46 by maperrea         ###   ########.fr        #
+#    Updated: 2021/12/01 17:31:21 by maperrea         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ OBJDIR			= obj
 
 OBJ				= $(addprefix $(OBJDIR)/, $(SRCS:.cpp=.o))
 
-CC				= clang++ -g -fsanitize=address
+CC				= clang++ 
 
 CFLAGS			= -Wall -Wextra -Werror
 
